--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "~2.1.0",
         "pusher/pusher-php-server": "^3.0",
-        "uxweb/sweet-alert": "^1.4"
+        "uxweb/sweet-alert": "^1.4",
+        "willvincent/laravel-rateable": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
